--- a/WhiteSquare.vcxproj
+++ b/WhiteSquare.vcxproj
@@ -214,12 +214,14 @@
     <ClCompile Include="game.cpp" />
     <ClCompile Include="input_handler.cpp" />
     <ClCompile Include="template.cpp" />
+    <ClCompile Include="tower.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="command.h" />
     <ClInclude Include="game.h" />
     <ClInclude Include="input_handler.h" />
     <ClInclude Include="template.h" />
+    <ClInclude Include="tower.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
